# askDB

./: .gitignore  README.md  pyproject.toml
askDB/: Insides.py
askDB/common/: constants.py  db.py  page.py  text.py
askDB/config/prompts/: create_db_schema.py
askDB/openai_integration/: request.py
askDB/pages/: 1_Define_Your_DB_Schema.py  4_Settings  4_Settings.py  5_About.py
askDB/pages/sub_pages/: create_schema_definiton.py
askDB/texts/: db_schema.py
datagptsynergy/config/prompts/: create_db_schema.py
datagptsynergy/pages/: 1_Define_Your_DB_Schema.py  2_Prompt_Engineering.py  3_Marketplace.py
