[tool.poetry]
name = "askDB"
version = "0.1.0"
description = ""
authors = ["Your Name <christoph.baldow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.6.1"
streamlit = "1.31.0"
watchdog = "^3.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
